Loading Page widget alignment fixed

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,5 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:700);
 
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .myButton {
   background-color:transparent;
   border-radius:7px;
